@@ -17,6 +17,7 @@
 #include <dds/DCPS/WaitSet.h>
 
 #include "dds/DCPS/transport/framework/TransportRegistry.h"
+#include <dds/DCPS/transport/framework/TransportExceptions.h>
 #include "dds/DCPS/transport/framework/TransportInst_rch.h"
 #include "dds/DCPS/transport/udp/UdpInst.h"
 #include "dds/DCPS/transport/udp/UdpInst_rch.h"
@@ -227,6 +228,9 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
 
   } catch (const CORBA::Exception& e) {
     e._tao_print_exception("Exception caught in main():");
+    return -1;
+  } catch (const OpenDDS::DCPS::Transport::Exception& e) {
+    ACE_DEBUG((LM_ERROR, "Transport exception caught in subscriber main\n"));
     return -1;
   }
 
