@@ -1,3 +1,12 @@
+Mon Sep 29 18:21:52 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * tests/DCPS/Compiler/idl_test1_main/main.cpp:
+
+        * tests/DCPS/ManyToMany/publisher.cpp:
+        * tests/DCPS/ManyToMany/subscriber.cpp:
+
+        * tests/DCPS/PersistentDurability/publisher.cpp:
+
 Mon Sep 29 17:32:34 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * tests/DCPS/Reconnect/run_test.pl:
